# Eng-s-OpenML-V2

./: CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
scripts/: create_header_files.py  create_operation_docs.sh  create_operation_files.py  create_python_tests.py  create_test_files.sh  treerep.py
src/include/: 2mi1mo_elem.h  error_include.h  kernel.h  matrix.h  read_kernel_source.h
src/kernel_runners/: 2mi1mo_elem.c
src/operations/1mi1mo/: inverse.cl  transpose.cl  transpose.md
src/operations/1mi1so/: determinant.cl  frb_nrm.cl  trace.cl
src/operations/2mi1mo/: elem_wise_add.md  elem_wise_div.cl  elem_wise_mul.cl  elem_wise_sub.cl  elem_wise_sub.md  mat_mul.cl  mat_mul.md  mat_vec_mul.cl
src/operations/eigenval/: eig_deflation.cl  eig_fnd_all_eig.cl  eig_inv_pwr_iter.cl  eig_pwr_iter.cl  eig_pwr_iter.md  eig_qr_alg.cl
src/operations/sngvaldec/: sng_val_dec.cl  sng_val_dec.md
src/utils/: read_kernel_source.c
testing/ctesting/determinant/: determinant.cpp
testing/ctesting/eig_qr_alg/: eig_qr_alg.cpp
testing/ctesting/elem_wise_add/: elem_wise_add.cpp
testing/ctesting/elem_wise_sub/: elem_wise_sub.cpp
testing/ctesting/frb_nrm/: frb_nrm.cpp
testing/ctesting/inverse/: inverse.cpp
testing/pythontesting/determinant/: determinant.py
testing/pythontesting/eig_deflation/: eig_deflation.py
testing/pythontesting/eig_fnd_all_eig/: eig_fnd_all_eig.py
testing/pythontesting/eig_inv_pwr_iter/: eig_inv_pwr_iter.py
testing/pythontesting/eig_pwr_iter/: eig_pwr_iter.py
testing/pythontesting/eig_qr_alg/: eig_qr_alg.py
(+33 files in other folders)
