[metadata]
name = my_library
version = 0.1.0
author = Lucas Eng
author_email = intlucaseng@gmail.com
description = Basic Python Library utilizing OpenCL for accelerated machine learnning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deflucaseng/Eng-s-OpenML-V2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src


[build_ext]
inplace = 1